test/fail/mixins/Mixin.mo
mixin() {
  var f1 = 0;
  public func m1() : async () { };
  system func preugprade() {}; // rejected (could be accepted?)
};
